base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: mission-link
  name: mission-link-deployment
  labels:
    app: mission-link
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cozserver
  template:
    metadata:
      labels:
        app: mission-link
    spec:
      containers:
      - name: mission-link
        image: 257840391579.dkr.ecr.ap-northeast-2.amazonaws.com/final:latest
        ports:
        - containerPort: 3000
