base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mission-link
  name: mission-link-service
spec:
  selector:
    app: mission-link
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
